--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-react": "^7.26.3",
     "@babel/runtime": "^7.21.5",
+    "@nutui/nutui-react": "^3.0.4",
     "@tarojs/components": "4.0.9",
     "@tarojs/helper": "4.0.9",
     "@tarojs/plugin-framework-react": "4.0.9",
@@ -55,8 +56,7 @@
     "@tarojs/shared": "4.0.9",
     "@tarojs/taro": "4.0.9",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "taro-ui": "^3.2.1"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
@@ -73,6 +73,7 @@
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "babel-preset-taro": "4.0.9",
+    "css-loader": "^7.1.2",
     "eslint": "^8.12.0",
     "eslint-config-taro": "4.0.9",
     "eslint-plugin-import": "^2.12.0",
@@ -82,6 +83,9 @@
     "jest-environment-jsdom": "^29.5.0",
     "postcss": "^8.4.18",
     "react-refresh": "^0.11.0",
+    "sass": "^1.86.0",
+    "sass-loader": "^16.0.5",
+    "style-loader": "^4.0.0",
     "stylelint": "^14.4.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths-webpack-plugin": "^4.0.1",
