--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "allowJs": true,
     "resolveJsonModule": true,
     "typeRoots": [
-      "node_modules/@types"
+      "@types"
     ]
   },
   "include": ["./src", "./types"],
